# ProofPartner

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  factory.md  pyproject.toml
.factory/: .gitignore  config.json
agentic_research/: __init__.py  logging.py
agentic_research/agents/: __init__.py  auctioneer.py  base.py  claim_check.py  conjecture_refiner.py  conjecturer.py  (+22 more)
docs/: API.md  ARCHITECTURE.md  FAQ.md  GLOSSARY.md  QUICKSTART.md  REPRODUCIBILITY.md  TUTORIAL.md
examples/: README.md
proofpartner-lean/: lakefile.toml
results/: dro-t1-formalize-output.txt  dro-t1-formalize-v2-output.txt  dro-t1-prop3.1-v2.json  dro-t1-prop3.1.json
scripts/: e2e_putnam_a1.py
tests/: test_agents.py  test_auctioneer.py  test_benchmarks.py  test_claim_check_agent.py  test_cli.py  test_cost.py  test_e2e.py  test_error_recovery.py  test_eval_runner.py  test_external_prover.py  test_extractor.py  test_formalization.py  test_formalization_cache.py  test_hardening.py  test_interaction_models.py  test_interactive_cli.py  test_interactive_formalization.py  test_lean_e2e.py  test_lean_mathlib.py  test_lean_repl_mathlib_cache.py  test_lemma_breakdown.py  test_logging.py  test_memory.py  test_mock_guard.py  test_models.py  test_nl_prover.py  test_orchestrator.py  test_orchestrator_e2e.py  test_pipeline_audit_fixes.py  test_preamble_threading.py  test_prebuilt_axioms.py  test_proof.py  test_proof_corrector.py  test_proof_critic.py  test_proof_detailer.py  test_proof_pipeline.py  test_putnam_regression.py  test_refinement.py  test_research.py  test_research_cmd.py  (+8 more)
(+53 files in other folders)
